Fixing the arrows overflow

--- a/src/slider/slider.css
+++ b/src/slider/slider.css
@@ -1,7 +1,6 @@
 .slider{
     position: relative;
     display: flex;
-    background: green;
     z-index: 2;
     justify-content:center;
 }
@@ -21,7 +20,6 @@
     border-radius: 10px;
     display: flex;
     position: absolute;
-    background: red;
     height:100%;
     transition: transform 0.3s ease-in-out, display 0.3s 0s, opacity 0.3s ease-in-out, z-index 0.3s 0s, filter 0.3s ease-in-out;
     transform: translateX(0) scale(75%);
@@ -50,49 +48,28 @@
     z-index:-2;
     filter: blur(4px);
 }
-.slider .arrows{
+.slider .left-arrow-container,
+.slider .right-arrow-container{
     display: flex;
-    flex-direction: row;
     position: absolute;
-    top:0;
-    left:0;
-    width:100%;
     height:100%;
+    align-items: center;
     font-size: 25px;
 }
-.slider .arrows .left-arrow-container{
-    display: flex;
-    position: absolute;
-    top:0;
-    left:0;
-    align-items: center;
-    width:100%;
-    height:100%;
+.slider #left-arrow{
+    transform: translateX(-25vh);
 }
-.slider .arrows .right-arrow-container{
-    display: flex;
-    position: absolute;
-    top:0;
-    left:0;
-    align-items: center;
-    width:100%;
-    height:100%;
+.slider #right-arrow{
+    transform: translateX(25vh);
 }
-.slider .arrows #left-arrow{
-    margin-left:26.5%;
-}
-.slider .arrows #right-arrow{
-    margin-left: 70%;
-}
-.slider .arrows #left-arrow,
-.slider .arrows #right-arrow{
-    position: relative;
+.slider #left-arrow,
+.slider #right-arrow{
     display: flex;
     opacity: 0.4;
     z-index:1;
 }
-.slider .arrows #left-arrow:hover,
-.slider .arrows #right-arrow:hover{
+.slider #left-arrow:hover,
+.slider #right-arrow:hover{
     cursor:pointer;
     opacity: 0.9;
 }
