--- a/src/software/software.css
+++ b/src/software/software.css
@@ -1,7 +1,6 @@
 .main-container{
     display: flex;
     flex-direction: column;
-    background: violet;
     width:100%;
     align-items: center;
 }
